fix(dropdown): fix filter type visibility

--- a/components/src/components/dropdown/dropdown.scss
+++ b/components/src/components/dropdown/dropdown.scss
@@ -341,12 +341,8 @@
   }
 
   ::slotted(sdds-dropdown-option) {
-    visibility: hidden;
+    visibility: visible;
     opacity: 1;
-  }
-
-  ::slotted(sdds-dropdown-option) label {
-    border: 1px solid red;
   }
 }
 
